Amend jQuery in index.html so that on small screens, header background goes black background when menu expanded (not collapsed) but behaves correctly when collapsed.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,6 +115,10 @@ header {
     -webkit-transition: all 0.6s ease;
 }
 
+.header-transparent {
+    background: transparent;
+}
+
 .dropdown-menu {
     border: none;
     min-width: auto;
